manifests/dummy-chassis-app/auto/overlays/aws-randd-production/gateway.yaml
kind: Gateway
apiVersion: networking/v1
metadata:
  name: dummy-chassis-app
spec:
  servers:
    - hosts:
        - dummy-chassis-app.rd.ds.sansan.com
        - dummy-chassis-app.blue.rd.ds.sansan.com
        - dummy-chassis-app.green.rd.ds.sansan.com
      name: http
  selector:
    istio: ingressgateway
