manifests/dummy-chassis-app/auto/overlays/aws-randd-production/virtual_service.yaml
kind: VirtualService
apiVersion: networking/v1
metadata:
  name: dummy-chassis-app
spec:
  hosts:
    - dummy-chassis-app.rd.ds.sansan.com
    - dummy-chassis-app.blue.rd.ds.sansan.com
    - dummy-chassis-app.green.rd.ds.sansan.com
